# quantum-nerf

./: .gitignore  .gitmodules  README.md  pyproject.toml
qnerf/: qnerf.py  qnerf_config.py  qnerf_field.py
qnerf/components/: modules.py  quantum_mlp.py
qnerf/modules/: modules.py
