[project]
name = "qnerf"
description = "Quantum Nerf method for Nerfstudio"
version = "0.1.0"

dependencies = [
    "nerfstudio >= 1.1.5",
    "PennyLane >= 0.41.1"
]

[tool.setuptools.packages.find]
include = ["qnerf*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
qnerf = 'qnerf.qnerf_config:qnerf_method'
